--- a/next/package.json
+++ b/next/package.json
@@ -2,18 +2,18 @@
   "name": "with-jest",
   "version": "1.0.0",
   "dependencies": {
-    "next": "^6.1.1",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "next": "^7.0.2",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3"
   },
   "devDependencies": {
     "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "22.4.3",
-    "enzyme": "3.2.0",
-    "enzyme-adapter-react-16": "1.1.1",
-    "jest": "22.0.1",
-    "react-addons-test-utils": "15.6.2",
-    "react-test-renderer": "16.2.0"
+    "babel-jest": "^23.6.0",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.7.0",
+    "jest": "^23.6.0",
+    "react-addons-test-utils": "^15.6.2",
+    "react-test-renderer": "^16.6.3"
   },
   "scripts": {
     "test": "NODE_ENV=test jest",
