--- a/proj/package.json
+++ b/proj/package.json
@@ -11,7 +11,7 @@
     "css-loader": "^1.0.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^23.4.2",
+    "jest": "^23.6.0",
     "node-sass": "^4.10.0",
     "postcss": "^7.0.6",
     "postcss-loader": "^3.0.0",
@@ -29,6 +29,7 @@
     "app1": "webpack --config webpack.2-1.js --mode production",
     "app2": "webpack --config webpack.2-2.js --mode production",
     "app3": "webpack --config webpack.3-1.js --mode production",
+    "app4": "webpack --config webpack.3-2.js --mode production",
     "autoprefixer-info": "autoprefixer --info"
   },
   "name": "demo-webpack",
