--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nuxt",
   "version": "1.0.0",
-  "description": "My primo Nuxt.js project",
+  "description": "My prime Nuxt.js project",
   "author": "7korobi",
   "private": true,
   "scripts": {
@@ -10,19 +10,49 @@
     "start": "nuxt start",
     "generate": "nuxt generate"
   },
+  "babel": {
+    "env": {
+      "test": {
+        "presets": [
+          "@babel/preset-env"
+        ]
+      }
+    }
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/$1",
+      "^~/(.*)$": "<rootDir>/$1"
+    },
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "vue"
+    ],
+    "collectCoverageFrom": [
+      "*s/**/*.{js,vue}"
+    ],
+    "transform": {
+      "^.+\\.js$": "babel-jest",
+      ".*\\.(vue)$": "vue-jest"
+    }
+  },
   "dependencies": {
     "cross-env": "^5.2.0",
     "nuxt": "^2.3.4"
   },
   "devDependencies": {
-    "@vue/test-utils": "^1.0.0-beta.26",
-    "babel-loader": "^8.0.4",
-    "babel-preset-vue-app": "^2.0.0",
+    "@babel/core": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "@vue/test-utils": "^1.0.0-beta.27",
+    "babel-core": "^7.0.0-0",
+    "babel-jest": "^23.6.0",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-plugin-prettier": "2.6.2",
     "jest": "^23.6.0",
-    "node-sass": "^4.10.0",
-    "nodemon": "^1.18.7",
-    "sass-loader": "^7.1.0",
-    "vue-jest": "^3.0.1",
-    "vue-test-utils": "^1.0.0-beta.11"
+    "nodemon": "^1.11.0",
+    "prettier": "1.14.3",
+    "vue-jest": "^3.0.2"
   }
 }
